fix: product card spacing

--- a/assets/component-product-grid.css
+++ b/assets/component-product-grid.css
@@ -33,11 +33,11 @@
   
 }
 
-.product-form__buttons > * {
+.card-wrapper .product-form__buttons > * {
   margin-bottom: 1rem;
 }
 
-.product-form__buttons {
+.card-wrapper .product-form__buttons {
   padding-top: 3rem;
 }
 
